--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Gomocalc" />
+    <meta name="apple-mobile-web-app-title" content="Rapfi" />
     <meta name="description" content="A powerful and easy-to-use online Gomoku/Renju AI" />
     <link rel="shortcut icon" sizes="192x192" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="/css/font-awesome.min.css" />
-    <title>五子棋计算器 Gomoku Calculator</title>
+    <title>Rapfi</title>
   </head>
 
   <body>
